build/kubernetes/dev/call/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tone-call-service
  namespace: dev
  labels:
    app: tone-call-worker
    component: call
spec:
  selector:
    app: tone-call-worker
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
